# siren_super_resolution

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: config.yaml  env.yaml.example
configs/dataset/: LapSRN.yaml
configs/model/: siren.yaml
docker/: Dockerfile
scripts/: clean.sh  download_dataset.sh  set_env.sh
scripts/docker/: build.sh  exec.sh  run.sh  stop.sh
src/: base.py  env.py  experiment.py
src/core/: dataset.py  registry.py
src/core/dataset/: __init__.py  command.py  container.py  discover.py
src/dataset/: __init__.py  dataset.py  discover.py
src/dataset/lapsrn/: __init__.py
src/datasets/: __init__.py  dataset.py
src/datasets/lapsrn/: __init__.py  container.py  coordinate2pixel.py  super_resolution.py
src/experiments/: train.py
src/models/: __init__.py  siren.py
